# simple_srv_rs

./: Cargo.toml  bb_includes_0.1.7.inc  build.rs  recipe_dependencies.py
build_tools/: bb_inc_generator.rs  mod.rs
src/: lib.rs  main.rs
